# contemplata

./: README.md  odil.cabal  stack.yaml
annotool/: Config.elm  Main.elm  Message.elm  Model.elm  Rose.elm  View.elm  elm-package.json  style.css  todo.txt
annotool/src/: Config.elm  Entry.elm  Main.elm  Menu.elm  Message.elm  Model.elm  Rose.elm  Server.elm  Util.elm  View.elm
annotool/src/Edit/: Anno.elm  AnnoNew.elm  Command.elm  Compare.elm  Config.elm  Core.elm  Init.elm  Message.elm  Model.elm  Popup.elm  Rule.elm  Subs.elm  View.elm
annotool/src/Edit/Anno/: Core.elm
annotool/src/Edit/Command/: Core.elm
annotool/src/Edit/Message/: Core.elm
annotool/src/Edit/View/: Box.elm  Circle.elm  Link.elm  Tree.elm
annotool/src/Server/: Core.elm
backend/: README.md  Setup.hs  contemplata.cabal  odil.cabal  stack.yaml
backend/app/: Main.hs
backend/config/: Anno.dhall  README.md  anno.dhall  remove.txt
backend/config/Anno/: Attr.typ  Command.typ  Entity  Entity.typ  EntityType.typ  KeyboardShortcut.typ  attr-test.val  attr.typ  attributes-test.val  commands.val  event.val  slink.val  timex  timex.val
backend/config/Anno/Attr/: Closed.typ  Free.typ  closed-test.val  closed.fun  closed.typ  free  free.fun  free.typ
backend/config/Anno/Message/: Simple.typ
backend/snap/: Application.hs  Auth.hs  Config.hs  Main.hs
backend/snap/Form/: LoginForm.hs
backend/snap/Handler/: Admin.hs  Anno.hs  Home.hs  Login.hs  User.hs  Utils.hs
backend/snap/Util/: Digestive.hs  Form.hs
backend/snaplets/heist/templates/: annotation.tpl  annotation_backup.tpl  default.tpl  nav.tpl
backend/snaplets/heist/templates/admin/: file.tpl  files.tpl  remove.tpl  upload.tpl  users.tpl
backend/snaplets/heist/templates/forms/: login-form.tpl
backend/snaplets/heist/templates/user/: files.tpl  guide.tpl  password.tpl
backend/snaplets/heist/templates/user/guide/: comparison.tpl  entities.tpl  general.tpl  general.tpl.bak  preprocessing.tpl  relations.tpl  segmentation.tpl  segmentation.tpl.bak  syntax.tpl
backend/src/Contemplata/: Ancor.hs  AnnoTypes.hs  Config.hs  CoreTypes.hs  DB.hs  DiscoDOP.hs  FTB.hs  Penn.hs  Server.hs  Stanford.hs  Types.hs  Users.hs  WebSocketServer.hs
backend/src/Contemplata/Ancor/: Preprocess.hs  Types.hs
backend/src/Contemplata/Ancor/IO/: Parse.hs  Show.hs
backend/src/Contemplata/Ancor/Preprocess/: Token.hs
backend/src/Contemplata/Anno/: Attr.hs  Entity.hs
backend/src/Contemplata/Config/: Attr.hs  Command.hs  Entity.hs  Message.hs
backend/src/Contemplata/Config/Entity/: AttrMap.hs  AttsMap.hs  Type.hs
backend/src/Contemplata/Format/: FTB.hs  Penn.hs
backend/src/Contemplata/Parser/: DiscoDOP.hs  Stanford.hs
backend/src/Contemplata/Server/: Config.hs  DB.hs  Types.hs  Users.hs
backend/src/Contemplata/Types/: Core.hs
backend/src/Odil/: Anno.hs  AnnoTypes.hs  Config.hs  CoreTypes.hs  DiscoDOP.hs  FTB.hs  Penn.hs  Server.hs  Stanford.hs
backend/src/Odil/Ancor/: Preprocess.hs  Types.hs
backend/src/Odil/Ancor/IO/: Parse.hs  Show.hs
backend/src/Odil/Ancor/Preprocess/: Token.hs
backend/src/Odil/Anno/: Attr.hs  Entity.hs
backend/src/Odil/Anno/Attr/: Anchor.hs
backend/src/Odil/Anno/Entity/: Type.hs
backend/src/Odil/Config/: Attr.hs  Command.hs  Entity.hs  Message.hs
backend/src/Odil/Config/Attr/: Closed.hs  Free.hs
backend/src/Odil/Config/Entity/: Type.hs
backend/src/Odil/Server/: Config.hs  DB.hs  Types.hs  Users.hs
code/: odil.cabal
code/src/Odil/: Server.hs
code/src/Odil/Ancor/: Types.hs
code/src/Odil/Ancor/IO/: Parse.hs
code/src/Odil/Server/: Config.hs  Types.hs
config/: README.md  devel.cfg  pass.json  remove.txt
config/dhall/: Anno.dhall  README.md
config/dhall/Anno/: Attr.typ  Entity.typ  KeyboardShortcut.typ  Message.typ  alink.val  attr-test.val  commands.val  event.val  mlink.val  nonTerminals.val  preTerminals.val  signal.val  slink.val  timex.val  tlink.val
config/dhall/Anno/Attr/: Free.typ  anchor.fun  closed.fun  free-test.val  free.fun
config/dhall/Anno/Message/: OneArg.typ  oneArg.fun  simple.fun
config/resources/public/css/: signin.css
corenlp/: README.md  stanford-server-fr.sh  stanford-train-fr.sh
crs/: 2017-05-03.txt  2017-07-06.txt  2017-10-19.txt  2017-11-09.txt
discodop/: discoserver-old.py  discoserver-pos.py  discoserver.py
notes/: 25-Sep-Anais.txt  31-may.txt  annotation.md  before-the-october-meeting.md  future-projects-with-jy.txt  isa-13.md
scripts/: ftb2penn.sh  simplify-and-parse-all.sh  stanford-client-fr.sh  stanford-fr.sh  stanford-parse-fr.sh  stanford-server-fr.sh  stanford-train-fr.sh  to-utf8.sh
src/Odil/Ancor/: Types.hs
src/Odil/Ancor/IO/: Show.hs
todos/: annotool.txt  backend.txt  before-holidays.txt  general.txt  parsing.txt
