name:                contemplata
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kawu/contemplata
license:             BSD2
license-file:        LICENSE
author:              Jakub Waszczuk
maintainer:          waszczuk.kuba@gmail.com
copyright:           2017-2018 Jakub Waszczuk
category:            NLP
build-type:          Custom
extra-source-files:  README.md, src/Contemplata/Parser/Stanford/CoreNLP.proto
cabal-version:       >=1.10

custom-setup
  setup-depends:       base
                     , Cabal
                     , proto-lens-setup

library
  hs-source-dirs:      src
  exposed-modules:     Contemplata.Types
                     , Contemplata.Types.Core

                     , Contemplata.Anno.Attr
                     , Contemplata.Anno.Entity

                     , Contemplata.Config
                     , Contemplata.Config.Attr
                     , Contemplata.Config.Entity
                     , Contemplata.Config.Entity.Type
                     , Contemplata.Config.Entity.AttrMap
                     , Contemplata.Config.Entity.AttsMap
                     , Contemplata.Config.Message
                     , Contemplata.Config.Command

                     , Contemplata.DB
                     , Contemplata.WebSocketServer
                     , Contemplata.Users

                     , Contemplata.Ancor
                     , Contemplata.Ancor.Types
                     , Contemplata.Ancor.IO.Parse
                     , Contemplata.Ancor.IO.Show
                     , Contemplata.Ancor.Preprocess

                     , Contemplata.Parser.Stanford
                     , Contemplata.Parser.DiscoDOP

                     , Contemplata.Format.Penn
                     , Contemplata.Format.FTB

  other-modules:       Proto.Contemplata.Parser.Stanford.CoreNLP
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2 && < 1.3
                     , bytestring >= 0.10 && < 0.11
                     , transformers >= 0.5 && < 0.6
                     , containers >= 0.5 && < 0.7
                     , vector >= 0.11 && < 0.13
                     , unordered-containers >= 0.2 && < 0.3
                     , tagsoup >= 0.14 && < 0.15
                     , websockets >= 0.10 && < 0.13
                     , aeson >= 1.0 && < 1.5
                     , polysoup >= 0.6 && < 0.7
                     , attoparsec >= 0.13 && < 0.14
                     , directory >= 1.3 && < 1.4
                     , filepath >= 1.4 && < 1.5
                     , errors >= 2.1 && < 2.4
                     , wreq >= 0.5 && < 0.6
                     -- needed because of `wreq`
                     , lens >= 4.15 && < 4.18
                     -- needed because of `wreq`
                     , lens-aeson >= 1.0 && < 1.2 
                     -- , network-uri >= 2.6 && < 2.7
                     , regex-applicative >= 0.3 && < 0.4
                     , proto-lens >= 0.2 && < 0.6
                     , proto-lens-protoc >= 0.2 && < 0.6
                     , proto-lens-runtime
                     , bytes >= 0.15 && < 0.16
                     , time >= 1.6 && < 1.9
                     , configurator >= 0.3 && < 0.4
                     , dhall >= 1.8 && < 1.25
                     , dhall-json >= 1.0 && < 1.4
  default-language:    Haskell2010

executable contemplata
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , contemplata
                     , optparse-applicative >= 0.13 && < 0.15
                     , text >= 1.2 && < 1.3
                     , bytestring >= 0.10 && < 0.11
                     , aeson >= 1.0 && < 1.5
                     , errors >= 2.1 && < 2.4
                     , filepath >= 1.4 && < 1.5
                     , containers >= 0.5 && < 0.7
                     , transformers >= 0.5 && < 0.6
                     , directory >= 1.3 && < 1.4
  default-language:    Haskell2010

executable contemplata-server
  hs-source-dirs:      snap
  main-is:             Main.hs
  other-modules:       Application
                     , Auth
                     , Config
                     , Form.LoginForm
                     , Handler.Home
                     , Handler.Login
                     , Handler.Anno
                     , Handler.Admin
                     , Handler.User
                     , Handler.Utils
                     , Util.Form
                     , Util.Digestive
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , contemplata
                     , text >= 1.2 && < 1.3
                     , lens >= 4.15 && < 4.18
                     , snap >= 1.0  && < 1.2
                     -- , optparse-applicative >= 0.13 && < 0.14
                     , snap-core >= 1.0 && < 1.1
                     , heist >= 1.0  && < 1.2
                     , bytestring >= 0.10 && < 0.11
                     , websockets-snap >= 0.10 && < 0.11
                     , websockets >= 0.10 && < 0.13
                     , transformers >= 0.5 && < 0.6
                     , mtl >= 2.2 && < 2.3
                     , digestive-functors >= 0.8 && < 0.9
                     , digestive-functors-heist >= 0.8 && < 0.9
                     , digestive-functors-snap >= 0.7 && < 0.8
                     , map-syntax >= 0.2 && < 0.4
                     , xmlhtml >= 0.2 && < 0.3
                     , configurator >= 0.3 && < 0.4
                     , containers >= 0.5 && < 0.7
                     , dhall >= 1.8 && < 1.25
                     , vector >= 0.11 && < 0.13
                     , directory >= 1.3 && < 1.4
                     , filepath >= 1.4 && < 1.5
                     , aeson >= 1.0 && < 1.5
                     , errors >= 2.1 && < 2.4
  default-language:    Haskell2010

test-suite contemplata-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , contemplata
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kawu/contemplata
