name:                odil
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/kawu/odil
license:             BSD2
license-file:        LICENSE
author:              Jakub Waszczuk
maintainer:          waszczuk.kuba@gmail.com
copyright:           2017 Jakub Waszczuk
category:            NLP
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Odil.Server
                     , Odil.Server.Types
                     , Odil.Server.DB
                     , Odil.Server.Config
                     , Odil.AnnoTypes
                     , Odil.Ancor.Types
                     , Odil.Ancor.IO.Parse
                     , Odil.Ancor.IO.Show
                     , Odil.Ancor.Preprocess
                     , Odil.Penn
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2 && < 1.3
                     , bytestring >= 0.10 && < 0.11
                     , transformers >= 0.5 && < 0.6
                     , containers >= 0.5 && < 0.6
                     , tagsoup >= 0.14 && < 0.15
                     , websockets >= 0.10 && < 0.12
                     , aeson >= 1.0 && < 1.3
                     , polysoup >= 0.6 && < 0.7
                     , attoparsec >= 0.13 && < 0.14
                     , directory >= 1.3 && < 1.4
                     , filepath >= 1.4 && < 1.5
                     , errors >= 2.1 && < 2.3
  default-language:    Haskell2010

executable odil
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , odil
                     , optparse-applicative >= 0.13 && < 0.14
                     , text >= 1.2 && < 1.3
                     , bytestring >= 0.10 && < 0.11
                     , aeson >= 1.0 && < 1.3
                     , errors >= 2.1 && < 2.3
                     , filepath >= 1.4 && < 1.5
  default-language:    Haskell2010

test-suite odil-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , odil
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/kawu/odil
