name:                odil
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://bitbucket.org/kawu/odil
license:             BSD2
license-file:        LICENSE
author:              Jakub Waszczuk
maintainer:          waszczuk.kuba@gmail.com
copyright:           2017 Jakub Waszczuk
category:            NLP
build-type:          Custom
extra-source-files:  README.md, src/Odil/Stanford/CoreNLP.proto
cabal-version:       >=1.10

custom-setup
  setup-depends: base, Cabal, proto-lens-protoc

library
  hs-source-dirs:      src
  exposed-modules:     Odil.Server
                     , Odil.CoreTypes
                     , Odil.Server.Types
                     , Odil.Server.DB
                     , Odil.Server.Users
                     , Odil.Server.Config
                     , Odil.AnnoTypes
                     , Odil.Ancor.Types
                     , Odil.Ancor.IO.Parse
                     , Odil.Ancor.IO.Show
                     , Odil.Ancor.Preprocess
                     , Odil.Ancor.Preprocess.Token
                     , Odil.Stanford
                     , Odil.DiscoDOP
                     , Odil.Penn
                     , Odil.FTB

                     , Odil.Config
                     , Odil.Config.Attr
                     , Odil.Config.Entity
                     , Odil.Config.Entity.Type
                     , Odil.Config.Message
                     , Odil.Config.Command

                     , Odil.Anno.Attr
                     , Odil.Anno.Entity

  other-modules:       Proto.Odil.Stanford.CoreNLP
  build-depends:       base >= 4.7 && < 5
                     , text >= 1.2 && < 1.3
                     , bytestring >= 0.10 && < 0.11
                     , transformers >= 0.5 && < 0.6
                     , containers >= 0.5 && < 0.6
                     , vector >= 0.11 && < 0.12
                     , unordered-containers >= 0.2 && < 0.3
                     , tagsoup >= 0.14 && < 0.15
                     , websockets >= 0.10 && < 0.12
                     , aeson >= 1.0 && < 1.3
                     , polysoup >= 0.6 && < 0.7
                     , attoparsec >= 0.13 && < 0.14
                     , directory >= 1.3 && < 1.4
                     , filepath >= 1.4 && < 1.5
                     , errors >= 2.1 && < 2.3
                     , wreq >= 0.5 && < 0.6
                     -- needed because of `wreq`
                     , lens >= 4.15 && < 4.16
                     -- needed because of `wreq`
                     , lens-aeson >= 1.0 && < 1.2 
                     -- , network-uri >= 2.6 && < 2.7
                     , regex-applicative >= 0.3 && < 0.4
                     , proto-lens >= 0.2 && < 0.3
                     , proto-lens-protoc >= 0.2 && < 0.3
                     , bytes >= 0.15 && < 0.16
                     , time >= 1.6 && < 1.9
                     , configurator >= 0.3 && < 0.4
                     , dhall >= 1.8 && < 1.9
                     , dhall-json >= 1.0 && < 1.1
  default-language:    Haskell2010

executable odil
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , odil
                     , optparse-applicative >= 0.13 && < 0.14
                     , text >= 1.2 && < 1.3
                     , bytestring >= 0.10 && < 0.11
                     , aeson >= 1.0 && < 1.3
                     , errors >= 2.1 && < 2.3
                     , filepath >= 1.4 && < 1.5
                     , containers >= 0.5 && < 0.6
                     , transformers >= 0.5 && < 0.6
                     , directory >= 1.3 && < 1.4
  default-language:    Haskell2010

executable odil-snap
  hs-source-dirs:      snap
  main-is:             Main.hs
  other-modules:       Application
                     , Auth
                     , Config
                     , Form.LoginForm
                     , Handler.Home
                     , Handler.Login
                     , Handler.Anno
                     , Handler.Admin
                     , Handler.User
                     , Handler.Utils
                     , Util.Form
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , odil
                     , text >= 1.2 && < 1.3
                     , lens >= 4.15 && < 4.16
                     , snap >= 1.0  && < 1.1
                     -- , optparse-applicative >= 0.13 && < 0.14
                     , snap-core >= 1.0 && < 1.1
                     , heist >= 1.0  && < 1.1
                     , bytestring >= 0.10 && < 0.11
                     , websockets-snap >= 0.10 && < 0.11
                     , websockets >= 0.10 && < 0.12
                     , transformers >= 0.5 && < 0.6
                     , mtl >= 2.2 && < 2.3
                     , digestive-functors >= 0.8 && < 0.9
                     , digestive-functors-heist >= 0.8 && < 0.9
                     , digestive-functors-snap >= 0.7 && < 0.8
                     , map-syntax >= 0.2 && < 0.3
                     , xmlhtml >= 0.2 && < 0.3
                     , configurator >= 0.3 && < 0.4
                     , containers >= 0.5 && < 0.6
                     , dhall >= 1.8 && < 1.9
                     , vector >= 0.11 && < 0.12
  default-language:    Haskell2010

test-suite odil-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , odil
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://bitbucket.org/kawu/odil
